--- a/howto.html
+++ b/howto.html
@@ -1,9 +1,1 @@
-How to install
-Here's how to install the Bussid mod:
-
-1. the first stage is to download the mod and livery
-2. If so, move the downloaded file to Internal > Bussid > Mods.
-3. After that, open Bus Simulator Indonesia.
-Go to the garage to find a mod truck.
-
-Done, now you can use the t
+<p>How to install<br>Here&apos;s how to install the Bussid mod:<br><br>1. the first stage is to download the mod and livery<br>2. If so, move the downloaded file to Internal &gt; Bussid &gt; Mods.<br>3. After that, open Bus Simulator Indonesia.<br>Go to the garage to find a mod truck.<br><br>Done, now you can use the</p>
